Stopped navbar from overflowing page

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,9 +1,9 @@
 .navbar {
 	height: 100%;
-	width: 100%;
+	max-width: 100%;
 	background-color: rgb(35, 35, 35);
 	font-size: 1.3rem;
-	padding: 1rem;
+	padding: 2rem;
 	display: flex;
 	justify-content: center;
 }
@@ -11,8 +11,8 @@
 .links {
 	display: flex;
 	justify-content: center;
-	justify-content: space-around;
-	width: 40rem;
+	justify-content: space-evenly;
+	width: 100%;
 }
 
 .links a {
